--- a/Forum.Web.UI/Views/Home/Index.cshtml
+++ b/Forum.Web.UI/Views/Home/Index.cshtml
@@ -5,22 +5,33 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <div style="display:flex; width: 100%; justify-content:center; align-items: center">
-        <form asp-controller="Home" asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
-                <input asp-for="Username" class="form-control" />
-                <span asp-validation-for="Username" class="text-danger"></span>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <div class="flex flex-row gap-2">
+                <a class="btn btn-primary" asp-area="" asp-controller="Topics" asp-action="Create">Create Topic</a>
+                <a class="btn btn-primary" asp-area="" asp-controller="Topics" asp-action="Index">Topics</a>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" type="password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+        }
+        else
+        { <div class="flex flex-column">
+            <form asp-controller="Home" asp-action="Login">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Username" class="control-label"></label>
+                    <input asp-for="Username" class="form-control"/>
+                    <span asp-validation-for="Username" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" type="password"/>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <button class="btn btn-primary" type="submit">Login</button>
+            </form>
+            <div>
+                @Html.ActionLink("Register", "Register")
             </div>
-            <button class="btn btn-primary" type="submit">Login</button>
-        </form>
-        <div>
-            @Html.ActionLink("Register", "Register")
         </div>
+        }
     </div>
 </div>
