--- a/Forum.Web.UI/Views/Topics/Details.cshtml
+++ b/Forum.Web.UI/Views/Topics/Details.cshtml
@@ -36,13 +36,8 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model!.CreateDate)
                 </dd>
-                <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model!.Likes)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model!.Likes)
-                </dd>
             </dl>
+            <button class="btn btn-info" >@Html.ActionLink("Like this post", "UpdateLike", new {id = Model.Id})</button>
         </div>
         <div>
             @if (Model?.Comments != null && Model.Comments.Count > 0)
@@ -73,6 +68,7 @@
                                 @Html.DisplayFor(model => comment.Likes)
                             </dd>
                         </dl>
+                        <button class="btn btn-info">@Html.ActionLink("Like this comment", "likeComment", new {id = comment.Id, topicId = Model.Id})</button>
                     </div>
                 }
             }
