--- a/Forum.Web.UI/Views/Home/Register.cshtml
+++ b/Forum.Web.UI/Views/Home/Register.cshtml
@@ -45,8 +45,8 @@
             <div class="form-control">
                 <label asp-for="Role" class="control-label"></label>
                 <select asp-for="Role" class="form-control">
-                    <option value="Admin">Admin</option>
-                    <option value="User">User</option>
+                    <option value="1">Admin</option>
+                    <option value="0">User</option>
                 </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
